# COXave

./: .deny.toml  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
api/: COXave.pyi  Cargo.toml  README.md  config.toml  pyproject.toml
api/src/: lib.rs
api/src/bindings/: mod.rs  python.rs
api/src/encodings/: ascii.rs  mod.rs  utf16.rs  utf32.rs  utf8.rs
api/src/essence/: mod.rs
api/src/essence/codings/: ascii.rs  utf16.rs  utf32.rs  utf8.rs
api/src/essence/search/: byte.rs  mod.rs
api/src/functors/: mod.rs
api/src/functors/platform/: mod.rs
api/src/functors/platform/aarch64/codings/: mod.rs
api/src/functors/platform/aarch64/codings/search/: utf32.rs
api/src/functors/platform/aarch64/codings/validation/: ascii.rs  mod.rs  utf16.rs  utf32.rs
api/src/functors/platform/aarch64/search/: byte.rs
api/src/functors/platform/arm/: mod.rs
api/src/functors/platform/arm/codings/search/: ascii.rs  utf16.rs
api/src/functors/platform/arm/codings/validation/: ascii.rs  utf16.rs  utf32.rs
api/src/functors/platform/arm/search/: byte.rs
api/src/functors/platform/x86/codings/: mod.rs
api/src/functors/platform/x86/codings/search/: utf8.rs
api/src/functors/platform/x86/codings/validation/: ascii.rs  utf16.rs  utf32.rs
api/src/functors/platform/x86/search/: byte.rs
api/src/functors/platform/x86_64/codings/search/: ascii.rs  utf16.rs  utf32.rs  utf8.rs
api/src/functors/platform/x86_64/codings/validation/: ascii.rs  mod.rs  utf16.rs  utf32.rs
api/src/functors/platform/x86_64/search/: byte.rs
api/src/functors/universal/: mod.rs
api/src/functors/universal/codings/: mod.rs
api/src/functors/universal/codings/search/: ascii.rs  utf16.rs  utf32.rs  utf8.rs
api/src/functors/universal/codings/validation/: ascii.rs  mod.rs  utf16.rs  utf32.rs  utf8.rs
api/src/functors/universal/search/: byte.rs  mod.rs
compact/checker/python/: is_ascii.py  is_utf32.py  speed.py
compact/checker/rust/: is_ascii.rs  is_utf32.rs
compact/functions/c/arm, aarch64/NEON/: bin2hex_f.c  bin2hex_s.c  hex2bin2hex.c
compact/functions/c/swar/: hex2bin2hex.c
compact/functions/c/x86, x86_64/AVX, AVX2/: bin2hex (cast).c  bin2hex.c  hex2bin2hex.c
compact/functions/c/x86, x86_64/AVX-512/: bin2hex.c  hex2bin2hex.c
compact/functions/c/x86, x86_64/SSE, SSE2/: bin2hex.c  hex2bin2hex.c
compact/functions/python/: ascii.py  speed.py  utf16.py  utf32.py  utf8.py
compact/functions/rust/: ascii.rs  utf32.rs
examples/python/: check_speed.py  fuzz.py  search_speed.py  speed.py
